test/Fail/Issue7629.err
Issue7629.agda:69.1-16: error: [ShouldBeEmpty]
fst (0ℚ <' eq/ wa wb i) should be empty, but that's not obvious to
me
when checking the clause left hand side
test wa wb i ()
